add broadcast receiver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         </activity>
         <activity android:name=".DetailTaskActivity">
         </activity>
+        <receiver android:name="service.MyBroadCast"
+            android:enabled="true">
+        </receiver>
     </application>
 
 </manifest>
